--- a/frontend/src/components/public/common/Layout/Footer/Footer.module.scss
+++ b/frontend/src/components/public/common/Layout/Footer/Footer.module.scss
@@ -1,5 +1,5 @@
-@use '../../../styles/variables' as vars;
-@use '../../../styles/mixins' as mix;
+@use '../../../../styles/variables' as vars;
+@use '../../../../styles/mixins' as mix;
 
 .footer {
   & {
