--- a/frontend/src/components/public/common/Layout/Header/Header.module.scss
+++ b/frontend/src/components/public/common/Layout/Header/Header.module.scss
@@ -1,4 +1,4 @@
-@use '../../../styles/variables' as vars;
+@use '../../../../styles/variables' as vars;
 
 .header {
   background: vars.$bg-level-1;
