--- a/frontend/src/components/public/pages/home/sections/IntegrationsSection/IntegrationsSection.module.scss
+++ b/frontend/src/components/public/pages/home/sections/IntegrationsSection/IntegrationsSection.module.scss
@@ -24,7 +24,7 @@
 
       & {
         height: 6rem;
-        padding: vars.$spacing-xs;
+        padding: vars.$spacing-xs !important;
         background: vars.$bg-level-1;
         border: vars.$border-width-normal solid vars.$border-color;
         position: relative;
@@ -142,7 +142,7 @@
           width: 6rem;
           height: 4rem;
           background: vars.$text-white;
-          padding: vars.$spacing-3xs;
+          padding: vars.$spacing-3xs !important;
           transition: vars.$transition-all;
         }
 
