--- a/frontend/src/components/styles/_mixins.scss
+++ b/frontend/src/components/styles/_mixins.scss
@@ -504,7 +504,7 @@
     display: flex;
     flex-direction: column;
     gap: vars.$spacing-xs;
-    margin-bottom: vars.$spacing-lg;
+    margin-bottom: vars.$spacing-sm;
   }
 
   label {
