--- a/frontend/src/components/public/common/Layout/Footer/Footer.module.scss
+++ b/frontend/src/components/public/common/Layout/Footer/Footer.module.scss
@@ -92,7 +92,15 @@
 
     & {
       gap: vars.$spacing-md;
+      width: 100%;
+      height: auto;
       margin-bottom: vars.$spacing-xl;
+    }
+
+    & img {
+      width: 100%;
+      max-width: calc(400px - 50px);
+      height: auto;
     }
 
     @media (max-width: vars.$breakpoint-md) {
