--- a/frontend/src/components/admin/pages/shared/local-item-descriptions/components/DraggableLocalItemDescriptions/DraggableDescriptionCard/DraggableDescriptionCard.module.scss
+++ b/frontend/src/components/admin/pages/shared/local-item-descriptions/components/DraggableLocalItemDescriptions/DraggableDescriptionCard/DraggableDescriptionCard.module.scss
@@ -1,6 +1,6 @@
 .draggable_card {
   width: 100%;
-  background: white;
+  background: var(--bg-level-1);
   border: 2px solid var(--bg-level-3);
   border-radius: var(--border-radius-lg);
   padding: var(--spacing-md);
