--- a/frontend/src/components/admin/common/AdminPage/AdminPage.module.scss
+++ b/frontend/src/components/admin/common/AdminPage/AdminPage.module.scss
@@ -1,10 +1,10 @@
 .admin_page {
   &_header {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1.2fr 1fr;
     justify-content: space-between;
     align-items: center;
     margin-bottom: var(--spacing-md);
-    gap: var(--spacing-md);
     background-color: var(--bg-level-1);
     border-radius: var(--border-radius);
     padding: var(--spacing-md);
@@ -19,14 +19,16 @@
   }
 
   &_buttons_container {
-    display: flex;
+    display: grid;
     align-items: center;
     gap: var(--spacing-sm);
+    flex-wrap: wrap;
   }
 
   &_create_button {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: var(--spacing-sm);
     padding: var(--spacing-sm) var(--spacing-lg);
     background: var(--success);
