--- a/frontend/src/components/public/pages/home/sections/TechnologySection/TechnologySection.module.scss
+++ b/frontend/src/components/public/pages/home/sections/TechnologySection/TechnologySection.module.scss
@@ -18,18 +18,25 @@
 
   &__content {
     @include mix.flex-column;
-
-    &_title {
-      margin-bottom: vars.$spacing-md;
-    }
-
-    &_description {
-      margin-bottom: vars.$spacing-xl;
-    }
   }
 
   &__badge {
     margin-bottom: vars.$spacing-lg;
+
+    @media (max-width: vars.$breakpoint-md) {
+      margin-bottom: vars.$spacing-xl;
+      font-size: vars.$font-size-lg !important;
+    }
+  }
+
+  &__title {
+    margin-bottom: vars.$spacing-md;
+    text-align: center;
+  }
+
+  &__description {
+    margin-bottom: vars.$spacing-xl;
+    text-align: center;
   }
 
   &__features {
@@ -48,7 +55,7 @@
     }
 
     &_icon {
-      @include mix.icon-container(48px, vars.$primary-light, vars.$primary-color);
+      @include mix.icon-container(4rem, vars.$primary-light, vars.$primary-color);
 
       & {
         flex-shrink: 0;
@@ -57,15 +64,15 @@
 
     &_content {
       flex: 1;
+    }
 
-      &_title {
-        margin-bottom: vars.$spacing-xs;
-      }
+    &_title {
+      margin-bottom: vars.$spacing-xs;
+    }
 
-      &_description {
-        color: vars.$text-secondary;
-        margin-bottom: 0;
-      }
+    &_description {
+      color: vars.$text-secondary;
+      margin-bottom: 0;
     }
   }
 
@@ -93,7 +100,7 @@
 
       & {
         gap: vars.$spacing-xs;
-        font-size: vars.$font-size-sm;
+        font-size: vars.$font-size-md;
         color: vars.$primary-color;
         font-weight: vars.$font-weight-semibold;
       }
@@ -123,6 +130,9 @@
   &__metric {
     text-align: center;
 
+    &_label {
+      margin-bottom: vars.$spacing-xs;
+    }
 
     &_value {
       color: vars.$primary-color;
