--- a/frontend/src/components/public/common/Layout/Header/Navigation/Navigation.module.scss
+++ b/frontend/src/components/public/common/Layout/Header/Navigation/Navigation.module.scss
@@ -15,10 +15,11 @@
   @media (max-width: vars.$breakpoint-lg) {
     & {
       gap: var(--spacing-2xs);
+      grid-template-columns: repeat(6, 1fr);
     }
   }
 
-  @media (max-width: vars.$breakpoint-md) {
+  @media (max-width: 900px) {
     & {
       position: fixed;
       top: 70px;
@@ -34,7 +35,7 @@
       opacity: 0;
       visibility: hidden;
       transition: all var(--transition-normal) var(--transition-ease);
-      z-index: var(--z-dropdown);
+      z-index: -1;
     }
   }
 
@@ -96,17 +97,23 @@
     @media (max-width: vars.$breakpoint-lg) {
       & {
         font-size: var(--font-size-md);
-        padding: var(--spacing-sm) var(--spacing-2xs);
+        width: 100%;
+        text-align: center;
+        padding: var(--spacing-md);
+      }
+
+      &:last-child {
+        border-bottom: none;
+      }
+
+      &[id="home"] {
+        display: none;
       }
     }
 
     @media (max-width: vars.$breakpoint-md) {
-      width: 100%;
-      text-align: center;
-      padding: var(--spacing-md);
-
-      &:last-child {
-        border-bottom: none;
+      &[id="home"] {
+        display: block;
       }
     }
   }
