--- a/frontend/src/components/public/pages/home/sections/ServicesSection/ServicesSection.module.scss
+++ b/frontend/src/components/public/pages/home/sections/ServicesSection/ServicesSection.module.scss
@@ -13,21 +13,44 @@
       padding: vars.$spacing-2xl;
     }
 
-    @media (max-width: vars.$breakpoint-md) {
+    @media (max-width: vars.$breakpoint-lg) {
       padding: vars.$spacing-xl;
+      margin-bottom: vars.$spacing-xl !important;
+    }
+
+    @media (max-width: vars.$breakpoint-xs) {
+      margin-bottom: vars.$spacing-lg;
     }
   }
 
   &__badge {
     margin-bottom: vars.$spacing-lg;
+
+    @media (max-width: vars.$breakpoint-lg) {
+      & {
+        font-size: vars.$font-size-lg !important;
+      }
+    }
   }
 
   &__title {
     margin-bottom: vars.$spacing-md;
+
+    @media (max-width: vars.$breakpoint-lg) {
+      & {
+        padding: 0 vars.$spacing-3xl;
+      }
+    }
   }
 
   &__description {
     margin-bottom: 0;
+
+    @media (max-width: vars.$breakpoint-lg) {
+      & {
+        padding: 0 vars.$spacing-2xl;
+      }
+    }
   }
 
   &__grid {
@@ -71,6 +94,13 @@
         overflow: hidden;
       }
 
+      @media (max-width: vars.$breakpoint-lg) {
+        & {
+          width: auto;
+          margin: vars.$spacing-md vars.$spacing-3xl;
+        }
+      }
+
       img {
         width: 100%;
         height: 100%;
@@ -85,6 +115,14 @@
 
     &_title {
       color: vars.$text-primary;
+
+      @media (max-width: vars.$breakpoint-lg) {
+        & {
+          margin: vars.$spacing-lg 0 calc(vars.$spacing-md * -1) 0;
+          padding: 0;
+          font-size: vars.$font-size-xl;
+        }
+      }
     }
 
     &_description {
