--- a/frontend/src/components/public/pages/products/ProductsListSection/ProductsListSection.module.scss
+++ b/frontend/src/components/public/pages/products/ProductsListSection/ProductsListSection.module.scss
@@ -9,6 +9,7 @@
     position: relative;
     overflow: hidden;
     background: vars.$bg-level-2;
+    padding-top: vars.$spacing-lg;
   }
 
   &::before {
@@ -19,6 +20,10 @@
     right: 0;
     bottom: 0;
     z-index: 0;
+  }
+
+  @media (max-width: vars.$breakpoint-xs) {
+    padding-top: vars.$spacing-md;
   }
 
   &__container {
@@ -88,7 +93,7 @@
   &__grid {
     display: grid;
     gap: vars.$spacing-md;
-    padding: vars.$spacing-xl 0;
+    padding: vars.$spacing-lg 0;
     grid-template-columns: repeat(3, 1fr);
     justify-content: center;
     margin-bottom: vars.$spacing-2xl;
@@ -126,7 +131,7 @@
         grid-template-columns: 1fr;
         margin: 0 auto vars.$spacing-2xl;
         padding: 0;
-        padding-top: vars.$spacing-sm;
+        padding-top: vars.$spacing-md;
       }
     }
   }
