--- a/frontend/src/components/public/pages/services/ServicesListSection/ServiceCard/ServiceCard.module.scss
+++ b/frontend/src/components/public/pages/services/ServicesListSection/ServiceCard/ServiceCard.module.scss
@@ -22,6 +22,12 @@
     }
   }
 
+  @media (max-width: vars.$breakpoint-md) {
+    & {
+      padding: vars.$spacing-sm;
+    }
+  }
+
   &:hover {
 
     .card__action_button {
@@ -63,13 +69,20 @@
       color: vars.$text-white;
       padding: vars.$spacing-xs vars.$spacing-sm;
       border-radius: vars.$border-radius-full;
-      font-size: vars.$font-size-xs;
+      font-size: vars.$font-size-sm;
       font-weight: vars.$font-weight-bold;
       text-transform: uppercase;
       letter-spacing: 0.5px;
       z-index: 3;
       box-shadow: vars.$shadow-md;
       transition: transform vars.$transition-normal vars.$ease-bounce;
+    }
+
+    @media (max-width: vars.$breakpoint-md) {
+      & {
+        top: vars.$spacing-sm;
+        left: vars.$spacing-sm;
+      }
     }
   }
 
@@ -78,6 +91,13 @@
     top: vars.$spacing-2xs;
     right: vars.$spacing-2xs;
     z-index: 3;
+
+    @media (max-width: vars.$breakpoint-md) {
+      & {
+        top: vars.$spacing-sm;
+        right: vars.$spacing-sm;
+      }
+    }
   }
 
   &__action_button {
@@ -110,7 +130,7 @@
 
     @media (max-width: vars.$breakpoint-sm) {
       & {
-        padding: vars.$spacing-sm;
+        padding: vars.$spacing-xs;
       }
     }
   }
@@ -124,7 +144,13 @@
       font-weight: vars.$font-weight-bold;
       line-height: 1.4;
       min-height: 2.8em;
-      font-size: vars.$font-size-xl
+      font-size: vars.$font-size-xl;
+    }
+
+    @media (max-width: vars.$breakpoint-sm) {
+      & {
+        font-size: vars.$font-size-2xl;
+      }
     }
   }
 
@@ -173,6 +199,12 @@
       font-weight: vars.$font-weight-bold;
       font-size: vars.$font-size-xl;
       text-wrap: nowrap;
+    }
+
+    @media (max-width: vars.$breakpoint-sm) {
+      & {
+        font-size: vars.$font-size-2xl;
+      }
     }
   }
 
@@ -238,10 +270,18 @@
       margin-bottom: 0;
     }
 
-    @media (max-width: vars.$breakpoint-sm) {
+    @media (max-width: vars.$breakpoint-md) {
       & {
-        padding: vars.$spacing-xs vars.$spacing-sm;
-        font-size: vars.$font-size-xs;
+        padding: vars.$spacing-sm vars.$spacing-md;
+      }
+
+      & p {
+        font-size: vars.$font-size-lg;
+      }
+
+      & svg {
+        width: 1.25rem;
+        height: 1.25rem;
       }
     }
   }
