--- a/frontend/src/components/public/pages/services/ServicesListSection/ServicesListSection.module.scss
+++ b/frontend/src/components/public/pages/services/ServicesListSection/ServicesListSection.module.scss
@@ -9,6 +9,7 @@
     position: relative;
     overflow: hidden;
     background: vars.$bg-level-2;
+    padding-top: vars.$spacing-lg;
   }
 
   &::before {
@@ -88,7 +89,7 @@
   &__grid {
     display: grid;
     gap: vars.$spacing-md;
-    padding: vars.$spacing-xl 0;
+    padding: vars.$spacing-lg 0;
     grid-template-columns: repeat(3, 1fr);
     justify-content: center;
     margin-bottom: vars.$spacing-2xl;
