--- a/frontend/src/components/admin/common/Form/FormStyles.module.scss
+++ b/frontend/src/components/admin/common/Form/FormStyles.module.scss
@@ -4,8 +4,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--spacing-lg);
-  max-height: 80vh;
-  overflow-y: auto;
+  height: auto;
 
   &_section {
     display: flex;
